conv-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: conv-api
  template:
    metadata:
      labels:
        component: conv-api
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: uploads
              mountPath: /opt/app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: conv-api-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: conv-api-service
spec:
  type: ClusterIP
  selector:
    component: conv-api
  ports:
    - port: 8080
      targetPort: 8080
