converter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: converter
  template:
    metadata:
      labels:
        component: converter
    spec:
      containers:
        - name: converter
          image: antonlarichev/conv-service:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: converter-service
spec:
  type: ClusterIP
  selector:
    component: converter
  ports:
    - port: 8080
      targetPort: 8080
