deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app-pod
  labels:
    app: conv-app
spec:
  containers:
    - name: conv-app
      image: antonlarichev/conv-app:1.2
      ports:
        - containerPort: 8080
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: conv-app-service
spec:
  type: NodePort
  selector:
    app: conv-app
  ports:
    - port: 80
      targetPort: 8080
