node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-app-port
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 80
    targetPort: 31200
  selector:
    components: frontend
